--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "vue-select",
-  "version": "1.0.0",
-  "author": "lei.wang@wuage.com",
+  "name": "v-select",
+  "version": "0.0.1",
+  "license": "MIT",
+  "author": "wanglei",
   "repository": {
     "type": "git",
     "url": "git://github.com/wanglei8381/vue-select.git"
   },
-  "license": "MIT",
   "devDependencies": {
-    "vue": "^2.2.1"
+    "vue": "^2.2.1",
+    "wag-cli": "3.2.0"
   }
 }
