--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "type": "git",
     "url": "git://github.com/wanglei8381/vue-select.git"
   },
+  "scripts": {
+    "start": "wag start"
+  },
   "devDependencies": {
-    "vue": "^2.2.1",
-    "wag-cli": "3.2.0"
+    "vue": "^2.4.2",
+    "wag-cli": "^3.3.2"
   }
 }
