--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,12 @@
 {
   "presets": [
-    "es2015",
-    "stage-3"
+    [
+      "env",
+      {
+        "modules": false
+      }
+    ],
+    "stage-0"
   ],
   "plugins": [
     "transform-vue-jsx"
